--- a/12_summary_results_LOD_samples.ipynb
+++ b/12_summary_results_LOD_samples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +36,13 @@
     "    '005': 0.05, \n",
     "    '01': 0.1\n",
     "}\n",
-    "# mode = \"all\"\n",
-    "# mode = \"hypo_only\"\n",
-    "# mode = \"hyper_only\"\n",
     "for mode in [\"all\", \"hypo_only\", \"hyper_only\"]:\n",
     "    all_cancer_classes = [\"Liver\", \"Lung\", \"Breast\", \"CRC\"]\n",
-    "    thresdf = pd.read_csv(\"thresdf.csv\")\n",
+    "    thresdf = pd.read_csv(f\"thresdf.{mode}.csv\")\n",
     "\n",
     "    for input_cancer_class in all_cancer_classes:\n",
-    "    # for input_cancer_class in [\"Liver\"]:\n",
     "        path_to_main_output = os.path.join(outdir, PROJECT, output_version)\n",
-    "        \n",
+    "\n",
     "        if mode == \"all\":\n",
     "            path_to_11_output = os.path.join(outdir, PROJECT, output_version, \"11_output\", input_cancer_class, \"thres_hypo_{}_hyper_{}\".format(thres_hypo, thres_hyper))\n",
     "            path_to_12_output = os.path.join(outdir, PROJECT, output_version, \"12_output\", input_cancer_class, \"thres_hypo_{}_hyper_{}\".format(thres_hypo, thres_hyper))\n",
@@ -76,37 +72,45 @@
     "        candidf[\"ratio_in_reads\"] = candidf[\"num_candi_reads\"] / candidf[\"in_read_count\"]\n",
     "        candidf.to_excel(os.path.join(path_to_12_output, \"candi_reads_all_{}_vs_control.xlsx\".format(input_cancer_class)), index = False)\n",
     "\n",
+    "        lod_metadata = pd.read_csv(\"analytical_LOD_TF 1.csv\")\n",
     "        candidf = candidf.fillna(0)\n",
-    "        candidf[\"Background\"] = candidf[\"SampleID\"].apply(lambda x: x.split(\"_\")[0])\n",
-    "        candidf[\"spike_in_ratio\"] = candidf[\"SampleID\"].apply(lambda x: convert_ratio[x.split(\"__\")[1].split(\"_\")[0]])\n",
-    "        candidf[\"log_spike_in_ratio\"] = candidf[\"SampleID\"].apply(lambda x: np.log(convert_ratio[x.split(\"__\")[1].split(\"_\")[0]]))\n",
-    "        candidf[\"tumor_spikein\"] = candidf[\"SampleID\"].apply(lambda x: x.split(\"from_\")[1].split(\"_\")[0])\n",
-    "        candidf[\"replicate\"] = candidf[\"SampleID\"].apply(lambda x: x.split(\"_\")[-1])\n",
+    "        candidf = candidf.merge(lod_metadata, right_on = \"Sample\", left_on = \"SampleID\")\n",
+    "        candidf[\"LABEL\"] = candidf[\"LABEL\"].apply(lambda x: \"CRC\" if x == \"Colorectal cancer\" else x.split(\" \")[0])\n",
     "\n",
-    "        metadata_spike_in = pd.read_csv(\"metadata_Spike_in_silico_TMD_samples_from_tissue_highdepth.csv\")\n",
-    "        candidf = candidf.merge(metadata_spike_in[[\"SampleID\", \"Spike_in_label\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
-    "        thresdf = pd.read_csv(f\"thresdf.{mode}.csv\")\n",
-    "        spike_in_label = input_cancer_class\n",
-    "        for background_sample in candidf[candidf[\"Spike_in_label\"] == spike_in_label].Background.unique():\n",
-    "            for feat in [\"ratio_raw\", \"ratio_in_reads\"]:\n",
-    "                candidf[candidf[\"Background\"] == background_sample].plot(x = \"log_spike_in_ratio\", y = feat, kind = \"scatter\")\n",
-    "                plt.axhline(y=thresdf[thresdf[\"cancer_class\"] == spike_in_label][feat].values[0], \n",
-    "                            color='r', linestyle='--', label=f'Threshold {spike_in_label}')\n",
-    "                xticks_labels = [convert_ratio[key] for key in convert_ratio.keys()]\n",
-    "                plt.xticks(ticks=np.log(list(convert_ratio.values())), labels=xticks_labels)\n",
-    "                figname1 = f\"Sample_{background_sample}_spike_in_{spike_in_label}.{feat}.svg\"\n",
-    "                # Calculate Pearson correlation coefficient\n",
-    "                pearson_r, _ = pearsonr(candidf[candidf[\"Background\"] == background_sample][\"spike_in_ratio\"], \n",
-    "                                        candidf[candidf[\"Background\"] == background_sample][feat])\n",
-    "                # Calculate R-squared value\n",
-    "                r_squared = pearson_r ** 2\n",
-    "                # Update title with Pearson r and R-squared value\n",
-    "                title = f\"Sample_{background_sample}, spike-in {spike_in_label}, {feat}, \\n Pearson r = {pearson_r:.2f}, R^2 = {r_squared:.2f}\"\n",
-    "                plt.title(title)\n",
-    "                plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
-    "                plt.tight_layout()\n",
-    "                plt.savefig(os.path.join(path_to_12_output, figname1), format='svg')\n",
-    "                plt.show()\n"
+    "        convert_ratio = {\n",
+    "            '5': 5, \n",
+    "            'HC': 0, \n",
+    "            '100': 100, \n",
+    "            '50': 50, \n",
+    "            '0.5': 0.5, \n",
+    "            '15': 15, \n",
+    "            '1': 1, \n",
+    "            '25': 25\n",
+    "        }\n",
+    "        candidf = candidf[candidf[\"LABEL\"] == input_cancer_class]\n",
+    "        candidf[\"spike-in\"] = candidf[\"spike-in\"].apply(lambda x: convert_ratio[str(x)])\n",
+    "\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        sns.scatterplot(data = candidf, x = \"spike-in\", y = \"ratio_raw\")\n",
+    "        plt.axhline(y=thresdf[thresdf[\"cancer_class\"] == input_cancer_class][\"ratio_raw\"].values[0], \n",
+    "                            color='r', linestyle='--', label=f'Threshold {input_cancer_class}')\n",
+    "                \n",
+    "        figname1 = f\"LOD_samples_{input_cancer_class}_raw_ratio.svg\"\n",
+    "        plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(os.path.join(path_to_12_output, figname1), format='svg')\n",
+    "        plt.show()\n",
+    "\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        sns.scatterplot(data = candidf, x = \"spike-in\", y = \"ratio_in_reads\")\n",
+    "        plt.axhline(y=thresdf[thresdf[\"cancer_class\"] == input_cancer_class][\"ratio_in_reads\"].values[0], \n",
+    "                    color='r', linestyle='--', label=f'Threshold {input_cancer_class}')\n",
+    " \n",
+    "        figname2 = f\"LOD_samples_{input_cancer_class}_raw_ratio.svg\"\n",
+    "        plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(os.path.join(path_to_12_output, figname2), format='svg')\n",
+    "        plt.show()\n"
    ]
   }
  ],
@@ -117,7 +121,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
