--- a/12_summary_results_LOD_samples.ipynb
+++ b/12_summary_results_LOD_samples.ipynb
@@ -347,7 +347,7 @@
     "        plt.axhline(y=thresdf[thresdf[\"cancer_class\"] == input_cancer_class][\"ratio_in_reads\"].values[0], \n",
     "                    color='r', linestyle='--', label=f'Threshold {input_cancer_class}')\n",
     " \n",
-    "        figname2 = f\"LOD_samples_{input_cancer_class}_raw_ratio.svg\"\n",
+    "        figname2 = f\"LOD_samples_{input_cancer_class}_raw_in_reads.svg\"\n",
     "        plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "        plt.tight_layout()\n",
     "        plt.savefig(os.path.join(path_to_12_output, figname2), format='svg')\n",
