--- a/TF01_pre_analysis.ipynb
+++ b/TF01_pre_analysis.ipynb
@@ -59,27 +59,477 @@
     "                        (ichorcnadf[\"ichorCNA\"].isna() == False)][[\"SampleID\", \"ichorCNA\"]]\n",
     "\n",
     "tf_sampledf = pd.read_csv(\"./ichorCNA/analytical_LOD_TF.csv\")\n",
+    "tf_sampledf['Label'] = tf_sampledf[\"LABEL\"].apply(lambda x: \"CRC\" if x == \"Colorectal cancer\" else x.split(\" \")[0])\n",
+    "tf_sampledf[\"SampleID\"] = tf_sampledf[\"Sample\"].values\n",
     "tf_candi_sampledf = pd.read_excel(os.path.join(path_to_12_output, \"candi_reads_all_{}_vs_control.xlsx\".format(input_cancer_class)))\n",
+    "\n",
+    "tf_maindf = tf_sampledf[[\"SampleID\", \"Label\", \"Actual tumor_fraction_ichorCNA\"]].merge(tf_candi_sampledf[[\"SampleID\", selected_candi_features]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
     "maindf = candidf.merge(ichorcnadf, right_on = \"SampleID\", left_on = \"SampleID\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sample</th>\n",
+       "      <th>Actual tumor_fraction_ichorCNA</th>\n",
+       "      <th>Simulated TF</th>\n",
+       "      <th>spike-in</th>\n",
+       "      <th>LABEL</th>\n",
+       "      <th>LABCODE</th>\n",
+       "      <th>Detected</th>\n",
+       "      <th>Decision</th>\n",
+       "      <th>RUNTM</th>\n",
+       "      <th>RUNGW</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LODCRC6</td>\n",
+       "      <td>0.02443</td>\n",
+       "      <td>0.003226</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Colorectal cancer</td>\n",
+       "      <td>CRC8</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3596</td>\n",
+       "      <td>R3606</td>\n",
+       "      <td>CRC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BREAST10R1</td>\n",
+       "      <td>0.02187</td>\n",
+       "      <td>0.02187</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Breast cancer</td>\n",
+       "      <td>BREAST10</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3725</td>\n",
+       "      <td>R3724</td>\n",
+       "      <td>Breast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LODCRC3PR1</td>\n",
+       "      <td>0.07539</td>\n",
+       "      <td>0.056745</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Colorectal cancer</td>\n",
+       "      <td>CRC8</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3549</td>\n",
+       "      <td>R3549</td>\n",
+       "      <td>CRC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LODBREAST7R2</td>\n",
+       "      <td>0.02290</td>\n",
+       "      <td>0.0001145</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>Breast cancer</td>\n",
+       "      <td>BREAST7</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3596</td>\n",
+       "      <td>R3606</td>\n",
+       "      <td>Breast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LODBREAST6</td>\n",
+       "      <td>0.02238</td>\n",
+       "      <td>0.0006958</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Breast cancer</td>\n",
+       "      <td>BREAST7</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3596</td>\n",
+       "      <td>R3606</td>\n",
+       "      <td>Breast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>CONTROL44R9</td>\n",
+       "      <td>0.03381</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3715</td>\n",
+       "      <td>R3715</td>\n",
+       "      <td>Gastric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>LODCONTROL2</td>\n",
+       "      <td>0.02951</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3683</td>\n",
+       "      <td>R3683</td>\n",
+       "      <td>Gastric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>LODCONTROL3</td>\n",
+       "      <td>0.02966</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3703</td>\n",
+       "      <td>R3703</td>\n",
+       "      <td>Gastric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>LODCONTROL4R1</td>\n",
+       "      <td>0.04060</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3715</td>\n",
+       "      <td>R3715</td>\n",
+       "      <td>Gastric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>LODCONTROL5R1</td>\n",
+       "      <td>0.03282</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3724</td>\n",
+       "      <td>R3725</td>\n",
+       "      <td>Gastric</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>679 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Sample  Actual tumor_fraction_ichorCNA     Simulated TF spike-in  \\\n",
+       "0          LODCRC6                         0.02443         0.003226        1   \n",
+       "1       BREAST10R1                         0.02187          0.02187      100   \n",
+       "2       LODCRC3PR1                         0.07539         0.056745       15   \n",
+       "3     LODBREAST7R2                         0.02290        0.0001145      0.5   \n",
+       "4       LODBREAST6                         0.02238        0.0006958        1   \n",
+       "..             ...                             ...              ...      ...   \n",
+       "674    CONTROL44R9                         0.03381  Healthy-control       HC   \n",
+       "675    LODCONTROL2                         0.02951  Healthy-control       HC   \n",
+       "676    LODCONTROL3                         0.02966  Healthy-control       HC   \n",
+       "677  LODCONTROL4R1                         0.04060  Healthy-control       HC   \n",
+       "678  LODCONTROL5R1                         0.03282  Healthy-control       HC   \n",
+       "\n",
+       "                 LABEL   LABCODE Detected Decision  RUNTM  RUNGW    Label  \n",
+       "0    Colorectal cancer      CRC8       No  Healthy  R3596  R3606      CRC  \n",
+       "1        Breast cancer  BREAST10       No  Healthy  R3725  R3724   Breast  \n",
+       "2    Colorectal cancer      CRC8       No  Healthy  R3549  R3549      CRC  \n",
+       "3        Breast cancer   BREAST7       No  Healthy  R3596  R3606   Breast  \n",
+       "4        Breast cancer   BREAST7       No  Healthy  R3596  R3606   Breast  \n",
+       "..                 ...       ...      ...      ...    ...    ...      ...  \n",
+       "674     Gastric cancer       NaN       No      NaN  R3715  R3715  Gastric  \n",
+       "675     Gastric cancer       NaN       No      NaN  R3683  R3683  Gastric  \n",
+       "676     Gastric cancer       NaN       No      NaN  R3703  R3703  Gastric  \n",
+       "677     Gastric cancer       NaN       No      NaN  R3715  R3715  Gastric  \n",
+       "678     Gastric cancer       NaN       No      NaN  R3724  R3725  Gastric  \n",
+       "\n",
+       "[679 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tf_candi_sampledf"
+    "tf_sampledf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sample</th>\n",
+       "      <th>Actual tumor_fraction_ichorCNA</th>\n",
+       "      <th>Simulated TF</th>\n",
+       "      <th>spike-in</th>\n",
+       "      <th>LABEL</th>\n",
+       "      <th>LABCODE</th>\n",
+       "      <th>Detected</th>\n",
+       "      <th>Decision</th>\n",
+       "      <th>RUNTM</th>\n",
+       "      <th>RUNGW</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LODCRC6</td>\n",
+       "      <td>0.02443</td>\n",
+       "      <td>0.003226</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Colorectal cancer</td>\n",
+       "      <td>CRC8</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3596</td>\n",
+       "      <td>R3606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BREAST10R1</td>\n",
+       "      <td>0.02187</td>\n",
+       "      <td>0.02187</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Breast cancer</td>\n",
+       "      <td>BREAST10</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3725</td>\n",
+       "      <td>R3724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LODCRC3PR1</td>\n",
+       "      <td>0.07539</td>\n",
+       "      <td>0.056745</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Colorectal cancer</td>\n",
+       "      <td>CRC8</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3549</td>\n",
+       "      <td>R3549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LODBREAST7R2</td>\n",
+       "      <td>0.02290</td>\n",
+       "      <td>0.0001145</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>Breast cancer</td>\n",
+       "      <td>BREAST7</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3596</td>\n",
+       "      <td>R3606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LODBREAST6</td>\n",
+       "      <td>0.02238</td>\n",
+       "      <td>0.0006958</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Breast cancer</td>\n",
+       "      <td>BREAST7</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>R3596</td>\n",
+       "      <td>R3606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>CONTROL44R9</td>\n",
+       "      <td>0.03381</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3715</td>\n",
+       "      <td>R3715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>LODCONTROL2</td>\n",
+       "      <td>0.02951</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3683</td>\n",
+       "      <td>R3683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>LODCONTROL3</td>\n",
+       "      <td>0.02966</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3703</td>\n",
+       "      <td>R3703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>LODCONTROL4R1</td>\n",
+       "      <td>0.04060</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3715</td>\n",
+       "      <td>R3715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>LODCONTROL5R1</td>\n",
+       "      <td>0.03282</td>\n",
+       "      <td>Healthy-control</td>\n",
+       "      <td>HC</td>\n",
+       "      <td>Gastric cancer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R3724</td>\n",
+       "      <td>R3725</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>679 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Sample  Actual tumor_fraction_ichorCNA     Simulated TF spike-in  \\\n",
+       "0          LODCRC6                         0.02443         0.003226        1   \n",
+       "1       BREAST10R1                         0.02187          0.02187      100   \n",
+       "2       LODCRC3PR1                         0.07539         0.056745       15   \n",
+       "3     LODBREAST7R2                         0.02290        0.0001145      0.5   \n",
+       "4       LODBREAST6                         0.02238        0.0006958        1   \n",
+       "..             ...                             ...              ...      ...   \n",
+       "674    CONTROL44R9                         0.03381  Healthy-control       HC   \n",
+       "675    LODCONTROL2                         0.02951  Healthy-control       HC   \n",
+       "676    LODCONTROL3                         0.02966  Healthy-control       HC   \n",
+       "677  LODCONTROL4R1                         0.04060  Healthy-control       HC   \n",
+       "678  LODCONTROL5R1                         0.03282  Healthy-control       HC   \n",
+       "\n",
+       "                 LABEL   LABCODE Detected Decision  RUNTM  RUNGW  \n",
+       "0    Colorectal cancer      CRC8       No  Healthy  R3596  R3606  \n",
+       "1        Breast cancer  BREAST10       No  Healthy  R3725  R3724  \n",
+       "2    Colorectal cancer      CRC8       No  Healthy  R3549  R3549  \n",
+       "3        Breast cancer   BREAST7       No  Healthy  R3596  R3606  \n",
+       "4        Breast cancer   BREAST7       No  Healthy  R3596  R3606  \n",
+       "..                 ...       ...      ...      ...    ...    ...  \n",
+       "674     Gastric cancer       NaN       No      NaN  R3715  R3715  \n",
+       "675     Gastric cancer       NaN       No      NaN  R3683  R3683  \n",
+       "676     Gastric cancer       NaN       No      NaN  R3703  R3703  \n",
+       "677     Gastric cancer       NaN       No      NaN  R3715  R3715  \n",
+       "678     Gastric cancer       NaN       No      NaN  R3724  R3725  \n",
+       "\n",
+       "[679 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tf_sampledf"
+    "maindf"
    ]
   },
   {
