--- a/TF01_pre_analysis.ipynb
+++ b/TF01_pre_analysis.ipynb
@@ -174,6 +174,8 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.linear_model import Ridge, Lasso, ElasticNet\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# Perform linear regression using both features: ichorCNA and the selected candi-read feature (raw ratio or in read ratio)\n",
     "input_features = [\"ichorCNA\", selected_candi_features] \n",
@@ -205,6 +207,58 @@
     "    plt.legend()\n",
     "    plt.title(f\"MSE = {mse:.2f}, R^2 = {r2:.2f}\")\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Ridge parameters: {'alpha': 0.1}\n",
+      "Best Ridge R^2 score: 0.3606066794512949\n",
+      "Best Lasso parameters: {'alpha': 0.1}\n",
+      "Best Lasso R^2 score: -0.039753977225933476\n",
+      "Best ElasticNet parameters: {'alpha': 0.1, 'l1_ratio': 0.1}\n",
+      "Best ElasticNet R^2 score: 0.008058383073180431\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Define the models\n",
+    "ridge = Ridge()\n",
+    "lasso = Lasso()\n",
+    "elasticnet = ElasticNet()\n",
+    "\n",
+    "# Define the parameter grids\n",
+    "ridge_params = {'alpha': [0.1, 1, 10, 100]}\n",
+    "lasso_params = {'alpha': [0.1, 1, 10, 100]}\n",
+    "elasticnet_params = {\n",
+    "    'alpha': [0.1, 1, 10, 100],\n",
+    "    'l1_ratio': [0.1, 0.5, 0.9]\n",
+    "}\n",
+    "\n",
+    "# Perform grid search for Ridge\n",
+    "ridge_grid = GridSearchCV(ridge, ridge_params, cv=5, scoring='r2')\n",
+    "ridge_grid.fit(X_train, y_train)\n",
+    "print(f\"Best Ridge parameters: {ridge_grid.best_params_}\")\n",
+    "print(f\"Best Ridge R^2 score: {ridge_grid.best_score_}\")\n",
+    "\n",
+    "# Perform grid search for Lasso\n",
+    "lasso_grid = GridSearchCV(lasso, lasso_params, cv=5, scoring='r2')\n",
+    "lasso_grid.fit(X_train, y_train)\n",
+    "print(f\"Best Lasso parameters: {lasso_grid.best_params_}\")\n",
+    "print(f\"Best Lasso R^2 score: {lasso_grid.best_score_}\")\n",
+    "\n",
+    "# Perform grid search for ElasticNet\n",
+    "elasticnet_grid = GridSearchCV(elasticnet, elasticnet_params, cv=5, scoring='r2')\n",
+    "elasticnet_grid.fit(X_train, y_train)\n",
+    "print(f\"Best ElasticNet parameters: {elasticnet_grid.best_params_}\")\n",
+    "print(f\"Best ElasticNet R^2 score: {elasticnet_grid.best_score_}\")"
    ]
   }
  ],
