--- a/TF01_pre_analysis.ipynb
+++ b/TF01_pre_analysis.ipynb
@@ -212,7 +212,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -235,12 +239,13 @@
     "elasticnet = ElasticNet()\n",
     "\n",
     "# Define the parameter grids\n",
-    "ridge_params = {'alpha': [0.1, 1, 10, 100]}\n",
-    "lasso_params = {'alpha': [0.1, 1, 10, 100]}\n",
-    "elasticnet_params = {\n",
-    "    'alpha': [0.1, 1, 10, 100],\n",
-    "    'l1_ratio': [0.1, 0.5, 0.9]\n",
-    "}\n",
+    "ridge_params = {'alpha':[1e-15,1e-10,1e-8,1e-3,1e-2,1,5,10,20,30,35,40,45,50,55,100]}\n",
+    "lasso_params = {'alpha':[1e-15,1e-10,1e-8,1e-3,1e-2,1,5,10,20,30,35,40,45,50,55,100]}\n",
+    "\n",
+    "alpha_values = [1e-5, 1e-4, 1e-3, 1e-2, 1e-1, 1, 10, 100, 1000, 10000]\n",
+    "l1_ratios = np.linspace(0, 1, 11) \n",
+    "\n",
+    "elasticnet_params = {'alpha': alpha_values, 'l1_ratio': l1_ratios}\n",
     "\n",
     "# Perform grid search for Ridge\n",
     "ridge_grid = GridSearchCV(ridge, ridge_params, cv=5, scoring='r2')\n",
