--- a/TF01_pre_analysis.ipynb
+++ b/TF01_pre_analysis.ipynb
@@ -100,6 +100,7 @@
     "    '1': 1, \n",
     "    'HC': 0\n",
     "}\n",
+    "\n",
     "tf_maindf[\"spike_in_ratio\"] = tf_maindf[\"spike_in\"].apply(lambda x: convert_ratio[x])\n",
     "maindf = candidf[[\"SampleID\", \"Label\", selected_candi_features]].merge(ichorcnadf, right_on = \"SampleID\", left_on = \"SampleID\")\n",
     "\n",
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,10 +355,9 @@
     "    loddf = pd.concat([dftrain, dftest], axis = 0)\n",
     "    loddf['spike_in_label'] = pd.Categorical(loddf['spike_in_label'], categories=[input_cancer_class, \"Control\"])\n",
     "\n",
-    "    inputdf = loddf.copy()\n",
-    "    fpr_ratio_raw, tpr_ratio_raw, thres_ratio_raw = roc_curve(inputdf['spike_in_label'].apply(lambda x: 1 if x == input_cancer_class else 0), inputdf['predicted_TF'])\n",
-    "    num_cancer = inputdf[inputdf[\"spike_in_label\"] == input_cancer_class].shape[0]\n",
-    "    num_control = inputdf[inputdf[\"spike_in_label\"] != input_cancer_class].shape[0]\n",
+    "    fpr_ratio_raw, tpr_ratio_raw, thres_ratio_raw = roc_curve(loddf['spike_in_label'].apply(lambda x: 1 if x == input_cancer_class else 0), loddf['predicted_TF'])\n",
+    "    num_cancer = loddf[loddf[\"spike_in_label\"] == input_cancer_class].shape[0]\n",
+    "    num_control = loddf[loddf[\"spike_in_label\"] != input_cancer_class].shape[0]\n",
     "\n",
     "    aucdf = pd.DataFrame({\"fpr\": fpr_ratio_raw, \"tpr\": tpr_ratio_raw, \"thres\": thres_ratio_raw})\n",
     "    aucdf_95 = aucdf[aucdf[\"fpr\"] <= 0.05]\n",
@@ -369,7 +369,7 @@
     "    # Calculate the AUC\n",
     "    roc_auc = auc(fpr_ratio_raw, tpr_ratio_raw)\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    sns.boxplot(data=inputdf, x=\"spike_in_label\", y=\"predicted_TF\", hue=\"spike_in_label\", palette = \"Set1\")\n",
+    "    sns.boxplot(data=loddf, x=\"spike_in_label\", y=\"predicted_TF\", hue=\"spike_in_label\", palette = \"Set1\")\n",
     "    plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "    plt.title(f\"Class: {input_cancer_class}, threshold: {lod_thres:.2f}, AUC: {roc_auc:.2f}, Sensitivity: {lod_sen:.2f}, Specificity: {lod_spec:.2f}\")\n",
     "    plt.tight_layout()\n",
@@ -388,6 +388,9 @@
     "    plt.tight_layout()\n",
     "    plt.savefig(os.path.join(path_to_savefile, f\"Prediction_{selected_candi_features}_model_{i}_REPORT4data.svg\"), format='svg')\n",
     "    plt.show()\n",
+    "\n",
+    "    loddf.to_excel(os.path.join(path_to_savefile, f\"Prediction_{selected_candi_features}_model_{i}_LODdata.xlsx\"), index = False)\n",
+    "    maindf.to_excel(os.path.join(path_to_savefile, f\"Prediction_{selected_candi_features}_model_{i}_REPORT4data.xlsx\"), index = False)\n",
     "\n",
     "\n"
    ]
