--- a/PANCANCER01_generate_readdf_for_regions.ipynb
+++ b/PANCANCER01_generate_readdf_for_regions.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of samples in this analysis: 0\n"
+      "Number of samples in this analysis: 7289\n"
      ]
     }
    ],
@@ -36,7 +36,8 @@
     "thres_hyper = 0.6\n",
     "\n",
     "path_to_main_output = os.path.join(outdir, PROJECT, output_version)\n",
-    "path_to_read_data = \"reads_from_450_regions_with_readname_TMDfull\"\n",
+    "path_to_03_output = os.path.join(path_to_main_output, \"03_output\")\n",
+    "path_to_read_data = \"/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions_with_readname_TMDfull\"\n",
     "path_to_save_panel = os.path.join( path_to_main_output, \"panel\")\n",
     "\n",
     "cpg450df = pd.read_excel(os.path.join(path_to_save_panel, \"TMD450_overlapping_TCGA.xlsx\"))\n",
@@ -69,27 +70,58 @@
     "        \n",
     "all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.sorted.csv\") if item.name.replace(\".sorted.csv\", \"\") in metadata[\"SampleID\"].values]\n",
     "\n",
+    "all_countDMP_results = [item for item in pathlib.Path(path_to_03_output).glob(\"*/countDMPs.xlsx\")]\n",
+    "# remove gastric results, not statistically significant\n",
+    "all_countDMP_results = [item for item in all_countDMP_results if \"Gastric\" not in str(item)]\n",
     "print(f\"Number of samples in this analysis: {len(all_read_files)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of TMD450 regions that have been tested by TCGA data: 981\n"
+     ]
+    }
+   ],
+   "source": [
+    "testdf = pd.DataFrame()\n",
+    "for item in all_countDMP_results:\n",
+    "    tmpdf = pd.read_excel(item)\n",
+    "    tmpdf[\"Label\"] = str(item).split(\"/\")[-2]\n",
+    "    testdf = pd.concat([testdf, tmpdf], axis = 0)\n",
+    "print(\"Number of TMD450 regions that have been tested by TCGA data: {}\".format(testdf.shape[0]))\n",
+    "if \"hyper\" not in testdf.columns:\n",
+    "    testdf[\"hyper\"] = 0\n",
+    "if \"hypo\" not in testdf.columns:\n",
+    "    testdf[\"hypo\"] = 0\n",
+    "testdf[\"hypo_or_hyper\"] = testdf[[\"hyper\", \"hypo\"]].apply(lambda x: \"hyper\" if x[0] > x[1] else \"hypo\", axis = 1)\n",
+    "testdf[\"region_combiname\"] = testdf[[\"Var1\", \"hypo_or_hyper\"]].apply(lambda x: f\"{x[0]}_{x[1]}\", axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions'"
+       "354"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_to_read_data"
+    "len(testdf.region_combiname.unique())"
    ]
   }
  ],
