--- a/PANCANCER01_generate_readdf_for_regions.ipynb
+++ b/PANCANCER01_generate_readdf_for_regions.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of samples in this analysis: 7289\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -78,14 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of TMD450 regions that have been tested by TCGA data: 981\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m testdf \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame()\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m all_countDMP_results:\n\u001b[1;32m      3\u001b[0m     tmpdf \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(item)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -101,27 +97,9 @@
     "if \"hypo\" not in testdf.columns:\n",
     "    testdf[\"hypo\"] = 0\n",
     "testdf[\"hypo_or_hyper\"] = testdf[[\"hyper\", \"hypo\"]].apply(lambda x: \"hyper\" if x[0] > x[1] else \"hypo\", axis = 1)\n",
-    "testdf[\"region_combiname\"] = testdf[[\"Var1\", \"hypo_or_hyper\"]].apply(lambda x: f\"{x[0]}_{x[1]}\", axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "354"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(testdf.region_combiname.unique())"
+    "testdf[\"region_combiname\"] = testdf[[\"Var1\", \"hypo_or_hyper\"]].apply(lambda x: f\"{x[0]}_{x[1]}\", axis = 1)\n",
+    "\n",
+    "testdf"
    ]
   }
  ],
