--- a/PANCANCER01_generate_readdf_for_regions.ipynb
+++ b/PANCANCER01_generate_readdf_for_regions.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples in this analysis: 7289\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -30,6 +38,9 @@
     "path_to_main_output = os.path.join(outdir, PROJECT, output_version)\n",
     "path_to_03_output = os.path.join(path_to_main_output, \"03_output\")\n",
     "path_to_read_data = \"/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions_with_readname_TMDfull\"\n",
+    "path_to_01_output = os.path.join(path_to_main_output, \"PANCANCER01_output\")\n",
+    "os.system(f\"mkdir -p {path_to_01_output}\")\n",
+    "\n",
     "path_to_save_panel = os.path.join( path_to_main_output, \"panel\")\n",
     "\n",
     "cpg450df = pd.read_excel(os.path.join(path_to_save_panel, \"TMD450_overlapping_TCGA.xlsx\"))\n",
@@ -70,19 +81,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m testdf \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame()\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m all_countDMP_results:\n\u001b[1;32m      3\u001b[0m     tmpdf \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(item)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of TMD450 regions that have been tested by TCGA data: 981\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Var1</th>\n",
+       "      <th>hyper</th>\n",
+       "      <th>hypo</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>hypo_or_hyper</th>\n",
+       "      <th>region_combiname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>chr1_109792367_109792397</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr1_109792367_109792397_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>chr1_111270865_111271077</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr1_111270865_111271077_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>chr1_111271216_111271381</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr1_111271216_111271381_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>chr1_1163599_1163832</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>hypo</td>\n",
+       "      <td>chr1_1163599_1163832_hypo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>chr1_118979744_118979926</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr1_118979744_118979926_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>chr9_132587027_132587206</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr9_132587027_132587206_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250</th>\n",
+       "      <td>chr9_19788616_19788772</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr9_19788616_19788772_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>chr9_21974678_21974780</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr9_21974678_21974780_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>chr9_36986086_36986754</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr9_36986086_36986754_hyper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>chr9_97853977_97854388</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>hyper</td>\n",
+       "      <td>chr9_97853977_97854388_hyper</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>981 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Var1  hyper  hypo   Label hypo_or_hyper  \\\n",
+       "0    chr1_109792367_109792397      1     0  Breast         hyper   \n",
+       "1    chr1_111270865_111271077      2     0  Breast         hyper   \n",
+       "2    chr1_111271216_111271381      1     0  Breast         hyper   \n",
+       "3        chr1_1163599_1163832      0     3  Breast          hypo   \n",
+       "4    chr1_118979744_118979926      1     0  Breast         hyper   \n",
+       "..                        ...    ...   ...     ...           ...   \n",
+       "249  chr9_132587027_132587206      1     0    Lung         hyper   \n",
+       "250    chr9_19788616_19788772      1     0    Lung         hyper   \n",
+       "251    chr9_21974678_21974780      1     0    Lung         hyper   \n",
+       "252    chr9_36986086_36986754      2     0    Lung         hyper   \n",
+       "253    chr9_97853977_97854388      1     0    Lung         hyper   \n",
+       "\n",
+       "                   region_combiname  \n",
+       "0    chr1_109792367_109792397_hyper  \n",
+       "1    chr1_111270865_111271077_hyper  \n",
+       "2    chr1_111271216_111271381_hyper  \n",
+       "3         chr1_1163599_1163832_hypo  \n",
+       "4    chr1_118979744_118979926_hyper  \n",
+       "..                              ...  \n",
+       "249  chr9_132587027_132587206_hyper  \n",
+       "250    chr9_19788616_19788772_hyper  \n",
+       "251    chr9_21974678_21974780_hyper  \n",
+       "252    chr9_36986086_36986754_hyper  \n",
+       "253    chr9_97853977_97854388_hyper  \n",
+       "\n",
+       "[981 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -101,6 +276,89 @@
     "\n",
     "testdf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/7289 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'path_to_07_output' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m in_read_counts \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m tqdm(all_read_files):\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[43mpath_to_07_output\u001b[49m, file\u001b[38;5;241m.\u001b[39mname\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.sorted.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.read_classification.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m))) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m         tmpdf \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(file, index_col \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      7\u001b[0m         tmpdf[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mread_overlap_rate\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m tmpdf[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstart\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseq\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mregion\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: check_read_inside_region(x[\u001b[38;5;241m0\u001b[39m], x[\u001b[38;5;241m1\u001b[39m], x[\u001b[38;5;241m2\u001b[39m]), axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'path_to_07_output' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "all_samples = []\n",
+    "raw_counts = []\n",
+    "in_read_counts = []\n",
+    "for file in tqdm(all_read_files):\n",
+    "    if os.path.isfile(os.path.join(path_to_01_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\"))) == False:\n",
+    "        tmpdf = pd.read_csv(file, index_col = [0])\n",
+    "        tmpdf[\"read_overlap_rate\"] = tmpdf[[\"start\", \"seq\", \"region\"]].apply(lambda x: check_read_inside_region(x[0], x[1], x[2]), axis = 1)\n",
+    "        raw_count = tmpdf.shape[0]\n",
+    "        in_read_count = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"].shape[0]\n",
+    "        all_samples.append(file.name.replace(\".sorted.csv\", \"\"))\n",
+    "        raw_counts.append(raw_count)\n",
+    "        in_read_counts.append(in_read_count)\n",
+    "\n",
+    "        ##### keep only reads that are completely inside the region\n",
+    "        tmpdf = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"]\n",
+    "\n",
+    "        ##### assign read type: hyper or hypo reads based on the given thresholds\n",
+    "        tmpdf[\"read_classification\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
+    "        \n",
+    "        ##### considers only regions that are tested with the TCGA data\n",
+    "        tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
+    "        tmpdf = tmpdf[tmpdf[\"region\"].isin(testdf.Var1.unique())]\n",
+    "        ##### count hypo and hyper reads in each region\n",
+    "        resdf = tmpdf.groupby([\"region\", \"read_classification\"]).seq.count().reset_index().pivot_table(index = \"region\", columns = \"read_classification\", values = \"seq\").reset_index().fillna(0)\n",
+    "\n",
+    "        ##### get the region type from TCGA test results\n",
+    "        resdf[\"region_type\"] = resdf[\"region\"].apply(lambda x: testdf[testdf.Var1 == x].hypo_or_hyper.values[0])\n",
+    "        if \"hyper\" not in resdf.columns:\n",
+    "            resdf[\"hyper\"] = 0\n",
+    "        if \"hypo\" not in resdf.columns:\n",
+    "            resdf[\"hypo\"] = 0\n",
+    "\n",
+    "        ##### assign candi reads equal to number of hypo or hyper reads, depending on the region type\n",
+    "        resdf[\"candi_reads\"] = resdf[[\"region_type\", \"hyper\", \"hypo\"]].apply(lambda x: x[1] if x[0] == \"hyper\" else x[2], axis = 1)\n",
+    "        \n",
+    "        ##### save the results\n",
+    "        resdf.to_csv(os.path.join(path_to_01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0])), index = False)\n",
+    "        tmpdf.to_csv(os.path.join(path_to_01_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n",
+    "    else:\n",
+    "        print(\"File {} already exists\".format(file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n",
+    "countdf = pd.DataFrame({\"SampleID\": all_samples, \"raw_count\": raw_counts, \"in_read_count\": in_read_counts})\n",
+    "countdf.to_csv(os.path.join(path_to_01_output, \"all_count.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
