--- a/PANCANCER02_summary_results.ipynb
+++ b/PANCANCER02_summary_results.ipynb
@@ -6,24 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'raw_count'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/miniconda3/envs/pytorch/lib/python3.9/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'raw_count'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 70\u001b[0m\n\u001b[1;32m     68\u001b[0m candidf \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSampleID\u001b[39m\u001b[38;5;124m\"\u001b[39m: all_samples, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_candi_reads\u001b[39m\u001b[38;5;124m\"\u001b[39m: all_mean_candi_reads})\n\u001b[1;32m     69\u001b[0m \u001b[38;5;66;03m# candidf = candidf.merge(countdf, right_on = \"SampleID\", left_on = \"SampleID\")\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m candidf[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mratio_raw\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m candidf[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_candi_reads\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m/\u001b[39m \u001b[43mcandidf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mraw_count\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     71\u001b[0m candidf[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mratio_in_reads\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m candidf[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_candi_reads\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m/\u001b[39m candidf[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124min_read_count\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     72\u001b[0m candidf \u001b[38;5;241m=\u001b[39m candidf\u001b[38;5;241m.\u001b[39mmerge(metadata[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSampleID\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLabel\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSet\u001b[39m\u001b[38;5;124m\"\u001b[39m]], right_on \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSampleID\u001b[39m\u001b[38;5;124m\"\u001b[39m, left_on \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSampleID\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/pytorch/lib/python3.9/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/miniconda3/envs/pytorch/lib/python3.9/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'raw_count'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 24/7289 [00:01<07:46, 15.58it/s]"
      ]
     }
    ],
@@ -66,26 +52,31 @@
     "\n",
     "path_to_main_output = os.path.join(outdir, PROJECT, output_version)\n",
     "path_to_01_output = os.path.join(path_to_main_output, \"PANCANCER01_output\")\n",
-    "all_files = [item for item in pathlib.Path(path_to_01_output).glob(\"*.candi_reads.csv\")]\n",
-    "all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.sorted.csv\") if item.name.replace(\".sorted.csv\", \"\") in metadata[\"SampleID\"].values]\n",
+    "path_to_02_output = os.path.join(path_to_main_output, \"PANCANCER02_output\")\n",
+    "os.system(f\"mkdir -p {path_to_02_output}\")\n",
     "\n",
+    "all_files = [item for item in pathlib.Path(path_to_01_output).glob(\"*.candi_reads.csv\")]\n",
+    "all_read_files = [item for item in pathlib.Path(path_to_01_output).glob(\"*.read_classification.csv\")]\n",
+    "\n",
+    "##### read countdf: raw count and in-read count number. \n",
     "if os.path.isfile(os.path.join(path_to_01_output, \"all_count.csv\")) == False:\n",
     "    all_samples = []\n",
     "    raw_counts = []\n",
     "    in_read_counts = []\n",
+    "\n",
     "    for file in tqdm(all_read_files):\n",
-    "        tmpdf = pd.read_csv(file, index_col = [0])\n",
-    "        tmpdf[\"read_overlap_rate\"] = tmpdf[[\"start\", \"seq\", \"region\"]].apply(lambda x: check_read_inside_region(x[0], x[1], x[2]), axis = 1)\n",
+    "        tmpdf = pd.read_csv(file)\n",
     "        raw_count = tmpdf.shape[0]\n",
     "        in_read_count = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"].shape[0]\n",
-    "        all_samples.append(file.name.replace(\".sorted.csv\", \"\"))\n",
+    "        all_samples.append(file.name.replace(\".read_classification.csv\", \"\"))\n",
     "        raw_counts.append(raw_count)\n",
     "        in_read_counts.append(in_read_count)\n",
     "\n",
     "    countdf = pd.DataFrame({\"SampleID\": all_samples, \"raw_count\": raw_counts, \"in_read_count\": in_read_counts})\n",
     "    countdf.to_csv(os.path.join(path_to_01_output, \"all_count.csv\"))\n",
     "else:\n",
-    "    countdf = pd.read_csv(os.path.join(path_to_01_output, \"all_count.csv\"), index_col = [0])\n",
+    "    print(f\"Countdf existst, reading in from {os.path.join(path_to_01_output, 'all_count.csv')} ...\")\n",
+    "    countdf = pd.read_csv(os.path.join(path_to_01_output, \"all_count.csv\"))\n",
     "\n",
     "all_samples = []\n",
     "all_mean_candi_reads = []\n",
@@ -96,7 +87,7 @@
     "    all_mean_candi_reads.append(mean_candi_reads)\n",
     "\n",
     "candidf = pd.DataFrame({\"SampleID\": all_samples, \"num_candi_reads\": all_mean_candi_reads})\n",
-    "# candidf = candidf.merge(countdf, right_on = \"SampleID\", left_on = \"SampleID\")\n",
+    "candidf = candidf.merge(countdf, right_on = \"SampleID\", left_on = \"SampleID\")\n",
     "candidf[\"ratio_raw\"] = candidf[\"num_candi_reads\"] / candidf[\"raw_count\"]\n",
     "candidf[\"ratio_in_reads\"] = candidf[\"num_candi_reads\"] / candidf[\"in_read_count\"]\n",
     "candidf = candidf.merge(metadata[[\"SampleID\", \"Label\", \"Set\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
@@ -108,13 +99,6 @@
     "candidf_train = candidf[candidf[\"Set\"] == \"train\"].copy()\n",
     "candidf_test = candidf[candidf[\"Set\"] != \"train\"].copy()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
