--- a/TF02_analysis_pan_cancer.ipynb
+++ b/TF02_analysis_pan_cancer.ipynb
@@ -30,7 +30,47 @@
     "mode = \"all\"\n",
     "\n",
     "summarydf = pd.DataFrame()\n",
-    "selected_candi_features = \"ratio_raw\"\n"
+    "selected_candi_features = \"ratio_raw\"\n",
+    "input_cancer_class = \"PAN_CANCER\"\n",
+    "\n",
+    "path_to_tf_output = os.path.join(outdir, PROJECT, output_version, \"TF_output\")\n",
+    "path_to_02_tf_output = os.path.join(path_to_tf_output, \"02_output\")\n",
+    "\n",
+    "path_to_savefile = os.path.join(path_to_02_tf_output, \"output\", input_cancer_class, selected_candi_features)\n",
+    "os.system(f\"mkdir -p {path_to_savefile}\")\n",
+    "\n",
+    "metadata = pd.read_excel(\"metadata_cfDNA_lowpdepth_TMD_bam_cov.xlsx\")\n",
+    "metadata = metadata[metadata[\"Label\"].isin([input_cancer_class, \"Control\"])]\n",
+    "\n",
+    "candidf = pd.read_excel(os.path.join(path_to_08_output, \"candi_reads_all_{}_vs_control.xlsx\".format(input_cancer_class)))\n",
+    "ichorcnadf = pd.read_excel(\"./ichorCNA/metadata_cfDNA_lowpdepth.xlsx\")\n",
+    "\n",
+    "# keep only samples that have ichorCNA tumor fractions. \n",
+    "ichorcnadf = ichorcnadf[(ichorcnadf[\"SampleID\"].isin(candidf[\"SampleID\"].unique())) & \n",
+    "                        (ichorcnadf[\"ichorCNA\"].isna() == False)][[\"SampleID\", \"ichorCNA\"]]\n",
+    "\n",
+    "tf_sampledf = pd.read_csv(\"./ichorCNA/analytical_LOD_TF.csv\")\n",
+    "tf_sampledf['Label'] = tf_sampledf[\"LABEL\"].apply(lambda x: \"CRC\" if x == \"Colorectal cancer\" else x.split(\" \")[0])\n",
+    "tf_sampledf[\"SampleID\"] = tf_sampledf[\"Sample\"].values\n",
+    "tf_sampledf = tf_sampledf[tf_sampledf[\"Label\"].isin([\"Control\", input_cancer_class])]\n",
+    "tf_candi_sampledf = pd.read_excel(os.path.join(path_to_12_output, \"candi_reads_all_{}_vs_control.xlsx\".format(input_cancer_class)))\n",
+    "\n",
+    "tf_maindf = tf_sampledf[[\"SampleID\", \"Label\", \"Actual tumor_fraction_ichorCNA\", \"Simulated TF\",\t\"spike-in\"]].merge(tf_candi_sampledf[[\"SampleID\", selected_candi_features]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
+    "tf_maindf.columns = [\"SampleID\", \"Label\", \"ichorCNA\", \"simulated_TF\", \"spike_in\", selected_candi_features]\n",
+    "tf_maindf[\"spike_in_label\"] = tf_maindf[\"simulated_TF\"].apply(lambda x: \"Control\" if x == \"Healthy-control\" else input_cancer_class)\n",
+    "convert_ratio = {\n",
+    "    '50' : 0.5, \n",
+    "    '100': 1, \n",
+    "    '0.5': 0.005, \n",
+    "    '25': 0.25, \n",
+    "    '15': 0.15, \n",
+    "    '5': 0.5, \n",
+    "    '1': 1, \n",
+    "    'HC': 0\n",
+    "}\n",
+    "\n",
+    "tf_maindf[\"spike_in_ratio\"] = tf_maindf[\"spike_in\"].apply(lambda x: convert_ratio[x])\n",
+    "maindf = candidf[[\"SampleID\", \"Label\", selected_candi_features]].merge(ichorcnadf, right_on = \"SampleID\", left_on = \"SampleID\")"
    ]
   }
  ],
