--- a/validation_Truong_Vi/preprocess_SampleSheet_for_fetching_reads.ipynb
+++ b/validation_Truong_Vi/preprocess_SampleSheet_for_fetching_reads.ipynb
@@ -47,13 +47,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "dfs1 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"Liver_MRD\")[[\"SampleID\", \"TM_BAM\"]]\n",
-    "dfs2 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"CRC_MRD\")[[\"SampleID\", \"TM_BAM\"]]\n",
-    "dfs3 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"Breast_MRD\")[[\"SampleID\", \"TM_BAM\"]]\n",
-    "dfs4 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"ECD\")[[\"SampleID\", \"TM_BAM\"]]\n",
+    "dfs1 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"Liver_MRD\")\n",
+    "dfs2 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"CRC_MRD\")\n",
+    "dfs3 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"Breast_MRD\")\n",
+    "dfs4 = pd.read_excel(\"metadata evaluate ctquantification.xlsx\", sheet_name=\"ECD\")\n",
     "\n",
     "fulldf = pd.concat([dfs1, dfs2, dfs3, dfs4], axis = 0)\n",
-    "fulldf.to_csv(\"validation_Truong.csv\", index = False)"
+    "fulldf.to_csv(\"validation_Truong_full.csv\")\n",
+    "fulldf[[\"SampleID\", \"TM_BAM\"]].to_csv(\"validation_Truong.csv\", index = False)"
    ]
   },
   {
