--- a/PANCANCER02_summary_results_TMD_samples.ipynb
+++ b/PANCANCER02_summary_results_TMD_samples.ipynb
@@ -76,7 +76,7 @@
     "    countdf.to_csv(os.path.join(path_to_01_output, \"all_count.csv\"))\n",
     "else:\n",
     "    print(f\"Countdf existst, reading in from {os.path.join(path_to_01_output, 'all_count.csv')} ...\")\n",
-    "    countdf = pd.read_csv(os.path.join(path_to_01_output, \"all_count.csv\"))\n",
+    "    countdf = pd.read_csv(os.path.join(path_to_01_output, \"all_count.csv\"), index_col = [0])\n",
     "\n",
     "all_samples = []\n",
     "all_mean_candi_reads = []\n",
