--- a/PANCANCER08_spike_in_TF_prediction.ipynb
+++ b/PANCANCER08_spike_in_TF_prediction.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Countdf existst, reading in from /media/hieunguyen/GSHD_HN01/outdir/TMD450_TCGA_data_analysis/20240910/PANCANCER07_output/all_count.csv ...\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,7 +25,7 @@
     "import warnings\n",
     "import pandas as pd\n",
     "from sklearn.metrics import roc_curve, auc\n",
-    "\n",
+    "import pickle\n",
     "def check_read_inside_region(start, seq, region):\n",
     "        read_end = start + len(seq)\n",
     "        region_start = int(region.split(\":\")[1].split(\"-\")[0])\n",
@@ -65,7 +73,7 @@
     "    countdf.to_csv(os.path.join(path_to_07_output, \"all_count.csv\"))\n",
     "else:\n",
     "    print(f\"Countdf existst, reading in from {os.path.join(path_to_07_output, 'all_count.csv')} ...\")\n",
-    "    countdf = pd.read_csv(os.path.join(path_to_07_output, \"all_count.csv\"))\n",
+    "    countdf = pd.read_csv(os.path.join(path_to_07_output, \"all_count.csv\"), index_col = [0])\n",
     "\n",
     "all_samples = []\n",
     "all_mean_candi_reads = []\n",
@@ -80,6 +88,304 @@
     "candidf[\"ratio_raw\"] = candidf[\"num_candi_reads\"] / candidf[\"raw_count\"]\n",
     "candidf[\"ratio_in_reads\"] = candidf[\"num_candi_reads\"] / candidf[\"in_read_count\"]\n",
     "candidf.to_excel(os.path.join(path_to_08_output, \"candi_reads_all_{}_vs_control.xlsx\".format(\"PAN_CANCER\")), index = False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidf = pd.read_excel(os.path.join(path_to_08_output, \"candi_reads_all_{}_vs_control.xlsx\".format(\"PAN_CANCER\")))\n",
+    "convert_ratio = {\n",
+    "    '0001': 0.001, \n",
+    "    '001': 0.01, \n",
+    "    '0005': 0.005, \n",
+    "    '005': 0.05, \n",
+    "    '01': 0.1,\n",
+    "    '05': 0.5,\n",
+    "    '08': 0.8\n",
+    "}\n",
+    "\n",
+    "ichorcnadf = pd.read_csv(\"validation_Truong_Vi/metadata_Spike_in_silico_GW_samples_from_tissue_highdepth_15112024.csv\")\n",
+    "candidf = candidf.merge(ichorcnadf[[\"SampleID\", \"ichorCNA\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
+    "candidf[\"Label\"] = candidf[\"SampleID\"].apply(lambda x: x.split(\"_\")[8])\n",
+    "candidf[\"spike_in_ratio\"] = candidf[\"SampleID\"].apply(lambda x: convert_ratio[x.split(\"_\")[4]])\n",
+    "\n",
+    "input_cancer_class = \"PAN_CANCER\"\n",
+    "\n",
+    "path_to_tf_output = os.path.join(outdir, PROJECT, output_version, \"TF_output\")\n",
+    "path_to_02_tf_output = os.path.join(path_to_tf_output, \"02_output\")\n",
+    "\n",
+    "\n",
+    "# selected_candi_features = \"ratio_raw\"\n",
+    "for selected_candi_features in [\"ratio_raw\", \"ratio_in_reads\"]:\n",
+    "    all_models = dict()\n",
+    "    selected_candi_features = \"ratio_raw\"\n",
+    "    path_to_save_models = os.path.join(path_to_02_tf_output, \"output\", input_cancer_class, selected_candi_features, \"models\")\n",
+    "\n",
+    "    ridge_grid = pickle.load(open(os.path.join(path_to_save_models, \"Ridge.pkl\"), \"rb\"))\n",
+    "    all_models[\"Ridge\"] = ridge_grid\n",
+    "\n",
+    "    elasticnet_grid = pickle.load(open(os.path.join(path_to_save_models, \"ElasticNet.pkl\"), \"rb\"))\n",
+    "    all_models[\"ElasticNet\"] = elasticnet_grid\n",
+    "    for i in all_models.keys():\n",
+    "        input_features = [\"ichorCNA\", selected_candi_features]\n",
+    "        candidf = candidf[candidf[\"ichorCNA\"].isna() == False] \n",
+    "        inputdf = candidf[input_features].copy()\n",
+    "        candidf[\"predicted_TF\"] = all_models[i].predict(inputdf.to_numpy())\n",
+    "        candidf.to_excel(os.path.join(path_to_08_output, f\"Prediction_{selected_candi_features}_model_{i}_Validation_data.xlsx\"), index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>num_candi_reads</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>raw_count</th>\n",
+       "      <th>in_read_count</th>\n",
+       "      <th>ratio_raw</th>\n",
+       "      <th>ratio_in_reads</th>\n",
+       "      <th>ichorCNA</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>spike_in_ratio</th>\n",
+       "      <th>predicted_TF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KZAZ52_spike_in__005_from_ZNC05S_label_CRC_rep...</td>\n",
+       "      <td>3.232628</td>\n",
+       "      <td>1787</td>\n",
+       "      <td>5267</td>\n",
+       "      <td>5267</td>\n",
+       "      <td>0.000614</td>\n",
+       "      <td>0.000614</td>\n",
+       "      <td>0.04019</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.051048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KACE35_spike_in__005_from_ZNB06SR3_label_Breas...</td>\n",
+       "      <td>4.220238</td>\n",
+       "      <td>4169</td>\n",
+       "      <td>7273</td>\n",
+       "      <td>7273</td>\n",
+       "      <td>0.000580</td>\n",
+       "      <td>0.000580</td>\n",
+       "      <td>0.04465</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.052930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K2AA15_spike_in__0005_from_ZNC03S_label_CRC_re...</td>\n",
+       "      <td>6.283626</td>\n",
+       "      <td>2454</td>\n",
+       "      <td>11638</td>\n",
+       "      <td>11638</td>\n",
+       "      <td>0.000540</td>\n",
+       "      <td>0.000540</td>\n",
+       "      <td>0.03432</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.048571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K0AC37_spike_in__0001_from_ZNL08S_label_Lung_r...</td>\n",
+       "      <td>4.672566</td>\n",
+       "      <td>371</td>\n",
+       "      <td>7788</td>\n",
+       "      <td>7788</td>\n",
+       "      <td>0.000600</td>\n",
+       "      <td>0.000600</td>\n",
+       "      <td>0.04623</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.053596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LBGS087_spike_in__01_from_ZNL15S_label_Lung_re...</td>\n",
+       "      <td>15.511696</td>\n",
+       "      <td>2432</td>\n",
+       "      <td>28805</td>\n",
+       "      <td>28805</td>\n",
+       "      <td>0.000539</td>\n",
+       "      <td>0.000539</td>\n",
+       "      <td>0.05653</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.057942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3961</th>\n",
+       "      <td>K4AC16_spike_in__005_from_ZNC04S_label_CRC_rep...</td>\n",
+       "      <td>7.691860</td>\n",
+       "      <td>1734</td>\n",
+       "      <td>13063</td>\n",
+       "      <td>13063</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.02653</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.045285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3962</th>\n",
+       "      <td>K2071_spike_in__0001_from_ZNC03S_label_CRC_rep...</td>\n",
+       "      <td>8.781977</td>\n",
+       "      <td>4845</td>\n",
+       "      <td>16617</td>\n",
+       "      <td>16617</td>\n",
+       "      <td>0.000528</td>\n",
+       "      <td>0.000528</td>\n",
+       "      <td>0.02762</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.045744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3963</th>\n",
+       "      <td>K4AC10_spike_in__001_from_ZNB03SR2_label_Breas...</td>\n",
+       "      <td>15.970760</td>\n",
+       "      <td>4235</td>\n",
+       "      <td>18607</td>\n",
+       "      <td>18607</td>\n",
+       "      <td>0.000858</td>\n",
+       "      <td>0.000858</td>\n",
+       "      <td>0.08085</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.068204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3964</th>\n",
+       "      <td>KAAK49_spike_in__005_from_ZNL09S_label_Lung_re...</td>\n",
+       "      <td>9.073746</td>\n",
+       "      <td>3923</td>\n",
+       "      <td>15316</td>\n",
+       "      <td>15316</td>\n",
+       "      <td>0.000592</td>\n",
+       "      <td>0.000592</td>\n",
+       "      <td>0.01833</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.041825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3965</th>\n",
+       "      <td>CRCC5_spike_in__005_from_ZMG048S_label_Gastric...</td>\n",
+       "      <td>15.615160</td>\n",
+       "      <td>2505</td>\n",
+       "      <td>26496</td>\n",
+       "      <td>26496</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.03252</td>\n",
+       "      <td>Gastric</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.047812</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3965 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               SampleID  num_candi_reads  \\\n",
+       "0     KZAZ52_spike_in__005_from_ZNC05S_label_CRC_rep...         3.232628   \n",
+       "1     KACE35_spike_in__005_from_ZNB06SR3_label_Breas...         4.220238   \n",
+       "2     K2AA15_spike_in__0005_from_ZNC03S_label_CRC_re...         6.283626   \n",
+       "3     K0AC37_spike_in__0001_from_ZNL08S_label_Lung_r...         4.672566   \n",
+       "4     LBGS087_spike_in__01_from_ZNL15S_label_Lung_re...        15.511696   \n",
+       "...                                                 ...              ...   \n",
+       "3961  K4AC16_spike_in__005_from_ZNC04S_label_CRC_rep...         7.691860   \n",
+       "3962  K2071_spike_in__0001_from_ZNC03S_label_CRC_rep...         8.781977   \n",
+       "3963  K4AC10_spike_in__001_from_ZNB03SR2_label_Breas...        15.970760   \n",
+       "3964  KAAK49_spike_in__005_from_ZNL09S_label_Lung_re...         9.073746   \n",
+       "3965  CRCC5_spike_in__005_from_ZMG048S_label_Gastric...        15.615160   \n",
+       "\n",
+       "      Unnamed: 0  raw_count  in_read_count  ratio_raw  ratio_in_reads  \\\n",
+       "0           1787       5267           5267   0.000614        0.000614   \n",
+       "1           4169       7273           7273   0.000580        0.000580   \n",
+       "2           2454      11638          11638   0.000540        0.000540   \n",
+       "3            371       7788           7788   0.000600        0.000600   \n",
+       "4           2432      28805          28805   0.000539        0.000539   \n",
+       "...          ...        ...            ...        ...             ...   \n",
+       "3961        1734      13063          13063   0.000589        0.000589   \n",
+       "3962        4845      16617          16617   0.000528        0.000528   \n",
+       "3963        4235      18607          18607   0.000858        0.000858   \n",
+       "3964        3923      15316          15316   0.000592        0.000592   \n",
+       "3965        2505      26496          26496   0.000589        0.000589   \n",
+       "\n",
+       "      ichorCNA    Label  spike_in_ratio  predicted_TF  \n",
+       "0      0.04019      CRC           0.050      0.051048  \n",
+       "1      0.04465   Breast           0.050      0.052930  \n",
+       "2      0.03432      CRC           0.005      0.048571  \n",
+       "3      0.04623     Lung           0.001      0.053596  \n",
+       "4      0.05653     Lung           0.100      0.057942  \n",
+       "...        ...      ...             ...           ...  \n",
+       "3961   0.02653      CRC           0.050      0.045285  \n",
+       "3962   0.02762      CRC           0.001      0.045744  \n",
+       "3963   0.08085   Breast           0.010      0.068204  \n",
+       "3964   0.01833     Lung           0.050      0.041825  \n",
+       "3965   0.03252  Gastric           0.050      0.047812  \n",
+       "\n",
+       "[3965 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidf"
    ]
   },
   {
