--- a/PANCANCER08_spike_in_TF_prediction.ipynb
+++ b/PANCANCER08_spike_in_TF_prediction.ipynb
@@ -134,7 +134,7 @@
     "        candidf = candidf[candidf[\"ichorCNA\"].isna() == False] \n",
     "        inputdf = candidf[input_features].copy()\n",
     "        candidf[\"predicted_TF\"] = all_models[i].predict(inputdf.to_numpy())\n",
-    "        candidf.to_excel(os.path.join(path_to_08_output, f\"Prediction_{selected_candi_features}_model_{i}_Validation_data.xlsx\"), index = False)"
+    "        candidf.to_excel(os.path.join(path_to_08_output, f\"Prediction_{selected_candi_features}_model_{i}_spike_in_data.xlsx\"), index = False)"
    ]
   }
  ],
